# e-rfid-rs

./: Cargo.toml  README.md
doc/: more_info.md
examples/: beagle.rs  rpi.rs
src/: lib.rs
