[package]
name = "rfid-rs"
version = "0.2.0"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>"]
edition = "2021"
description = "MFRC522 library for embedded use"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/jspngh/rfid-rs"
homepage = "https://gitlab.com/jspngh/rfid-rs"
keywords = ["rfid", "mfrc522", "mifare"]
categories = ["embedded"]
readme = "crate.info"

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3.2"
