[package]
name = "mfrc522"
version = "0.3.0"
authors = ["Jonas Spanoghe <jonas@spanoghe.net>", "Jorge Aparicio <jorge@japaric.io>"]
edition = "2021"
description = "A platform agnostic driver to interface the MFRC522 (RFID reader/writer)"
documentation = "https://docs.rs/mfrc522"
license = "MIT OR Apache-2.0"
repository = "https://gitlab.com/jspngh/rfid-rs"
homepage = "https://gitlab.com/jspngh/rfid-rs"
keywords = ["rfid", "mfrc522", "embedded-hal", "mifare"]
categories = ["embedded", "hardware-support", "no-std"]

[dependencies]
embedded-hal = "0.2"

[dev-dependencies]
linux-embedded-hal = "0.3.2"
